# graphweaver-agent

./: .gitignore  Dockerfile  README.md  agent.py  agent_streaming.py  agent_tools.py  business_rules.yaml  business_rules_generated.yaml  conversation_memory.py  conversation_sidebar.py  debug_logger.py  docker-compose.app.yml  docker-compose.override.yml  docker-compose.yml  init.sql  langchain_tools.py  loan_agent.py  prompts.txt  pyproject.toml  queries.txt  router_agent.py  streamlit_app.py  tool_implementations.py
dynamic_tools/: tool_hello_world.py  tool_json_analyzer.py  tool_registry.json  tool_sql_formatter.py  tool_text_stats.py
mcp_servers/: graphweaver_mcp.py
rdf/: __init__.py  fuseki_client.py  ontology.py  rdf_sync.py  sparql_queries.py
src/graphweaver_agent/: __init__.py  business_rules.py
src/graphweaver_agent/connectors/: __init__.py  postgresql.py
src/graphweaver_agent/discovery/: __init__.py  pipeline.py
src/graphweaver_agent/dynamic_tools/: __init__.py  agent_tools.py  mcp_tools.py  tool_registry.py
src/graphweaver_agent/embeddings/: __init__.py  kg_embeddings.py  semantic_fk.py  text_embeddings.py  vector_indexes.py
src/graphweaver_agent/graph/: __init__.py  neo4j_ops.py
src/graphweaver_agent/ltn/: __init__.py  knowledge_base.py  predicates.py  rule_generator.py  rule_learner.py  trainer.py
src/graphweaver_agent/models/: __init__.py  schemas.py
src/graphweaver_agent/rdf/: __init__.py  fuseki_client.py  ontology.py  rdf_sync.py  sparql_queries.py
src/graphweaver_agent/streaming/: __init__.py  callbacks.py
